another mod of html 8am

--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@ test html</b></font></p>
 
 </p>
 <p align="center"><font size="6" style="font-size: 26pt"><b>here is
-some text to go with the web page -- modified Jan 13 8am</b></font></p>
+some text to go with the web page -- modified Jan 13 8am
+
+another of the test text items added</b></font></p>
 </body>
 </html>
