--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@ test html</b></font></p>
 <p align="center"><font size="6" style="font-size: 26pt"><b>here is
 some text to go with the web page -- modified Jan 13 8am
 
-another of the test text items added</b></font></p>
+another of the test text items added
+some more to see here. yet antoher</b></font></p>
 </body>
 </html>
