changes 8pm MLK

--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@ test html -- lookee here</b></font></p>
 some text to go with the web page -- modified Jan 13 8am
 
 another of the test text items added
-some more to see here. yet antoher</b></font></p>
+some more to see here. yet antoher
+info at 8pm MLK day
+</b></font></p>
 </body>
 </html>
